k8s/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modsecurity
  name: modsecurity
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: modsecurity
