k8s/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modsecurity
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    # nginx.ingress.kubernetes.io/modsecurity-snippet: |
    #   SecRuleEngine On
    # nginx.ingress.kubernetes.io/modsecurity-snippet: |
    #   SecRuleEngine On
    #   SecAction "id:900200,phase:1,nolog,pass,t:none,\
    #     setvar:tx.allowed_methods=GET HEAD POST OPTIONS PUT PATCH DELETE"
    # nginx.ingress.kubernetes.io/modsecurity-snippet: |
    #   SecRuleEngine On
    #   # Max request sizes in bytes (with/without files)
    #   # Note NGINX Ingress has its own annotations, keep in sync!
    #   SecRequestBodyLimit 1048576 # 1Mb (default is 12.5Mb)
    #   SecRequestBodyNoFilesLimit 262144 # 250Kb (default is 128Kb)
    #   SecRequestBodyLimitAction Reject # Reject if larger (we could also let it pass with ProcessPartial)
    # nginx.ingress.kubernetes.io/proxy-body-size: 50m

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: modsecurity
            port:
              number: 80
